Add VK Trash Cleanup and Video Uploader Agent scripts
- Implemented vk-trash-cleanup.sh to move files from app trash to macOS Trash with logging and notifications.
- Created vk-uploader-agent.sh to process video uploads with Docker, including error handling and notifications.
- Enhanced uploader.py to support VPN management, adaptive chunk uploading, and detailed failure logging.
- Added vk-logo.png for notifications.
- Removed legacy vk-uploader-agent.sh script.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,23 @@
-trash
-logs
-wireguard
-.claude
-__pycache__
+# Directories
+trash/
+logs/
+wireguard/
+__pycache__/
+.vscode/
+
+# Environment and config
 .env
-.dockerignore
-.vscode
+
+# macOS
 .DS_Store
+
+# Python
+*.pyc
+*.pyo
+*.pyd
+__pycache__/
+*.so
+
+# Logs
+*.log
+*.txt
