Update README and .env.example for OrbStack compatibility and performance notes

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ WIREGUARD_DIR=$HOME/wireguard
 LOGS_DIR=./logs
 TRASH_DIR=./trash
 
-# Docker settings
+# Docker settings (OrbStack recommended for macOS)
 DOCKER_BIN=docker
 IMAGE_NAME=vk-uploader
 
