Add WireGuard configuration support and update README
- Introduced setup script for WireGuard configurations from environment variables.
- Added WireGuard config converter script for encoding/decoding .conf files.
- Updated README with detailed instructions for WireGuard configuration options.
- Modified .gitignore to include wireguard directory and .env.wg-configs.
- Added .gitkeep to wireguard directory to ensure it is tracked.

--- a/.env.example
+++ b/.env.example
@@ -25,5 +25,23 @@ MAX_LOG_LINES=1000
 # VPN settings
 SKIP_WIREGUARD=false  # Set to true to disable VPN
 
+# WireGuard Configurations (portable, non-committed)
+# Option 1: Place .conf files in wireguard/ directory (not committed to git)
+# Option 2: Base64 encode configs as environment variables (portable)
+#
+# To convert between formats, use the converter script:
+#   ./scripts/wg-config-converter.sh encode    # .conf → env variables
+#   ./scripts/wg-config-converter.sh decode    # env variables → .conf
+#
+# After encoding, the script creates .env.wg-configs that you can append here
+# Example output (uncomment and replace with your base64-encoded configs):
+# WG_CONFIG_1=W0ludGVyZmFjZV0KUHJpdmF0ZUtleT1...
+# WG_CONFIG_1_NAME=privado.syd-012.conf
+# WG_CONFIG_2=W0ludGVyZmFjZV0KUHJpdmF0ZUtleT1...
+# WG_CONFIG_2_NAME=privado.sin-005.conf
+# WG_CONFIG_3=...
+# WG_CONFIG_4=...
+# WG_CONFIG_5=...
+
 # Timezone (optional)
 TZ=Australia/Sydney
