Implement VK Video Uploader with WireGuard Rotation and Enhanced Logging on Home Assistant Addons
- Added a complete video uploader for VK with support for chunked uploads and playlists.
- Integrated WireGuard management for VPN rotation during uploads.
- Implemented custom logging with a rotating file handler to maintain recent logs.
- Introduced network traffic monitoring to track upload progress.
- Enhanced error handling and retry logic for upload failures.
- Added functionality to create and manage playlists based on video directory structure.
- Included a mechanism to mark files as uploaded to avoid re-uploading.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -27,9 +27,11 @@ jobs:
         variant:
           - name: "base"
             dockerfile: "Dockerfile"
+            context: "."
             suffix: ""
           - name: "standalone"
-            dockerfile: "Dockerfile.standalone"
+            dockerfile: "Dockerfile"
+            context: "vk-uploader"
             suffix: "-standalone"
 
     steps:
@@ -67,8 +69,8 @@ jobs:
       - name: Build and push ${{ matrix.variant.name }} Docker image
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: ${{ matrix.variant.dockerfile }}
+          context: ${{ matrix.variant.context }}
+          file: ${{ matrix.variant.context }}/${{ matrix.variant.dockerfile }}
           platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
