Fix context definition for Docker build variants in workflow

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -27,9 +27,11 @@ jobs:
         variant:
           - name: "main"
             dockerfile: "Dockerfile"
+            context: "."
             suffix: ""
           - name: "base"
             dockerfile: "Dockerfile.base"
+            context: "."
             suffix: "-base"
     steps:
       - name: Checkout repository
