Refactor VK Video Uploader for Home Assistant Addon: - Rename Dockerfile.base to Dockerfile.addon and update its content for addon functionality. - Modify docker-build.yml to use Dockerfile.addon. - Create README.addon.md for addon-specific instructions. - Introduce config.yaml for addon configuration. - Replace run-base.sh with run-addon.sh for improved startup script. - Update run.sh to streamline logging and permissions. - Remove obsolete config.json and docker-compose.yml files.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -30,9 +30,9 @@ jobs:
             context: "."
             suffix: ""
           - name: "base"
-            dockerfile: "Dockerfile.base"
+            dockerfile: "Dockerfile.addon"
             context: "."
-            suffix: "-base"
+            suffix: "-addon"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
